--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,6 @@
 name: CI/CD Pipeline
 
+# Trigger the pipeline on push or pull request events to the 'main' branch
 on:
   push:
     branches:
@@ -9,32 +10,67 @@ on:
       - main
 
 jobs:
-  build-and-push:
+  # Job 1: Code Testing
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.12'
+          python-version: '3.x'
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Tests
-        run: pytest tests/
-
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Build and Push Docker Image
+      - name: Run tests
         run: |
-          docker build -t ton-utilisateur/ton-image:latest .
-          docker push ton-utilisateur/ton-image:latest
+          pytest  # Replace with the appropriate test command for your project
+
+  # Job 2: Build and Push Docker Image
+  docker:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker image
+        run: |
+          docker build -t yourdockerhubusername/yourapp:latest .
+
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push yourdockerhubusername/yourapp:latest
+
+  # Job 3: Deploy with Docker Compose (Optional Bonus)
+  deploy:
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Set up Docker Compose
+        run: |
+          sudo curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+      - name: Deploy using Docker Compose
+        run: |
+          docker-compose up -d  # This assumes you have a docker-compose.yml file in your project
 
 
