--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,6 +1,5 @@
 name: CI/CD Pipeline
 
-# Trigger the pipeline on push or pull request events to the 'main' branch
 on:
   push:
     branches:
@@ -10,67 +9,27 @@ on:
       - main
 
 jobs:
-  # Job 1: Code Testing
-  test:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-      - name: Run tests
-        run: |
-          pytest  # Replace with the appropriate test command for your project
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-  # Job 2: Build and Push Docker Image
-  docker:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Build Docker image
+      run: |
+        docker build -t rbens047/app:latest .
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Docker image
-        run: |
-          docker build -t yourdockerhubusername/yourapp:latest .
-
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker push yourdockerhubusername/yourapp:latest
-
-  # Job 3: Deploy with Docker Compose (Optional Bonus)
-  deploy:
-    runs-on: ubuntu-latest
-    needs: docker
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      
-      - name: Set up Docker Compose
-        run: |
-          sudo curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-
-      - name: Deploy using Docker Compose
-        run: |
-          docker-compose up -d  # This assumes you have a docker-compose.yml file in your project
-
+    - name: Push Docker image to Docker Hub
+      run: |
+        docker push rbens047/app:latest
 
