--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,6 +16,20 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Set up Python environment
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+        pip install pytest  # Install pytest if not in requirements.txt
+
+    - name: Run tests
+      run: |
+        pytest --maxfail=1 --disable-warnings -q
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -32,4 +46,5 @@ jobs:
     - name: Push Docker image to Docker Hub
       run: |
         docker push rbens047/app:latest
+
 
